# To_Do_List

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SQL.md  docker-compose.yml  pyproject.toml
To_Do_List/: Dockerfile  conftest.py  pytest.ini  requirements.txt
To_Do_List/apps/projects/: admin.py  forms.py  managers.py  mixins.py  models.py  tests.py  urls.py  views.py
To_Do_List/apps/projects/migrations/: 0001_initial.py  0002_delete_task.py
To_Do_List/apps/projects/templates/projects/: project_list.html
To_Do_List/apps/projects/templates/projects/partials/: project_detail.html  project_form.html  project_list_partial.html  projects_all.html
To_Do_List/apps/tasks/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
To_Do_List/apps/tasks/migrations/: 0001_initial.py  0002_add_performance_indexes.py
To_Do_List/apps/tasks/templates/tasks/partials/: task_form.html  task_item.html
To_Do_List/apps/users/: admin.py  emails.py  models.py  tests.py  urls.py  views.py
To_Do_List/apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
To_Do_List/apps/users/static/users/css/: login.css  logout.css  password_reset.css  signup.css
To_Do_List/apps/users/static/users/js/: login.js  logout.js  password_reset.js  signup.js
To_Do_List/apps/users/templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
To_Do_List/apps/users/templates/users/: profile.html
To_Do_List/config/: settings.py  urls.py
To_Do_List/static/css/: main.css
To_Do_List/static/js/: main.js
To_Do_List/templates/: base.html  home.html
