[project]
name = "todolist"
version = "0.1.0"
description = "Task management web application"
requires-python = ">=3.13"

[tool.ruff]
# Set the maximum line length
line-length = 100
indent-width = 4
target-version = "py313"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "staticfiles",
    "media",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DJ",     # flake8-django
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "Q",      # flake8-quotes
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "DJ001",  # avoid using null=True on string-based fields
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files
"__init__.py" = ["F401"]  # Unused imports
"settings.py" = ["F405"]  # Star imports
"*/migrations/*.py" = ["ALL"]  # Ignore all rules in migrations

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["config", "apps"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
testpaths = ["To_Do_List/apps"]
